--- a/src/main/resources/templates/admin_page.html
+++ b/src/main/resources/templates/admin_page.html
@@ -35,7 +35,7 @@
                                 <h5 class="card-title">Paketat</h5>
                                 <p class="card-text">Administro Paketat</p>
                                 <a href="/admin/packet/register" class="btn btn-primary">Shto Pakete</a>
-                                <a href="/admin/packet/all" class="btn btn-primary">Shiko Paketat</a>
+                                <a href="/packet/all" class="btn btn-primary">Shiko Paketat</a>
                             </div>
                         </div>
                     </div>
