--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -7,9 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/javascript" href="/assets/js/guistuff.js" />
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 
 
 </head>
@@ -17,7 +20,7 @@
 
     <!--ADMIN NAVBAR-->
     <nav th:fragment="inside_admin_navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Travel<span class="text-primary">Agency</span></a>
+        <a class="navbar-brand" th:href="@{/home}">Travel<span class="text-primary">Agency</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,14 +28,14 @@
         <!-- PERMBAJTJA E NAVBARIT       -->
         <div class="collapse navbar-collapse">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/">Mbyll<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" th:href="@{/home}">Mbyll<span class="sr-only">(current)</span></a>
             </div>
         </div>
 
     </nav>
     <!-- MAIN NAVBAR-->
     <nav th:fragment="main_navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Travel<span class="text-primary">Agency</span></a>
+        <a class="navbar-brand" th:href="@{/home}">Travel<span class="text-primary">Agency</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,6 +46,7 @@
                 <a class="nav-item nav-link active" th:href="@{/home}">Home <span class="sr-only"></span></a>
                 <a class="nav-item nav-link active" th:href="@{/packet/all}">Paketat <span class="sr-only"></span></a>
                 <a class="nav-item nav-link active" th:href="@{/about}">Reth Nesh </a>
+                <a class="nav-item nav-link active" th:href="@{/test}">test</a>
             </div>
         </div>
 
@@ -166,23 +170,29 @@
 
                     <!-- Modal body -->
                     <div class="modal-body">
-                        <form th:action="@{/process_register}" style="max-width: 600px; margin: 0 auto;" id="modal-register" method="post">
+                        <form th:action="@{/process_register}" th:object="${user}" style="max-width: 600px; margin: 0 auto;" id="modal-register" method="post">
 
                             <div class="m-3">
                                 <div class="form-group row">
-                                    <label class="col-form-label col-sm-4"> Emri Juaj :</label>
+                                    <label class="col-form-label col-sm-4"> Name :</label>
                                     <div class="col-sm-8">
-                                        <input type="text" th:name="name" class="form-control" required>
+                                        <input type="text" th:field="*{name}" class="form-control" required>
                                     </div>
                                 </div>
 
                                 <div class="form-group row">
-                                    <label class="col-form-label col-sm-4"> Passwordi Juaj :</label>
+                                    <label class="col-form-label col-sm-4"> UserName :</label>
                                     <div class="col-sm-8">
-                                        <input type="password" th:name="password" class="form-control" required>
+                                        <input type="text" th:field="*{username}" class="form-control" required>
                                     </div>
                                 </div>
 
+                                <div class="form-group row">
+                                    <label class="col-form-label col-sm-4"> Passwordi :</label>
+                                    <div class="col-sm-8">
+                                        <input type="password" th:field="*{password}" class="form-control" required>
+                                    </div>
+                                </div>
 
                             </div>
 
@@ -213,7 +223,7 @@
                         </div>
                         <!--end of col-->
                         <div class="col">
-                            <input name="keyword" class="form-control form-control-lg form-control-borderless" type="search" placeholder="Kerko sipas qytetit ose shtetit" required minlength="1">
+                            <input name="keyword" class="form-control form-control-lg form-control-borderless" type="search" placeholder="Kerko sipas kontinentit ,shtetit ose qytetit" required minlength="1">
                         </div>
                         <!--end of col-->
                         <div class="col-auto">
@@ -258,78 +268,13 @@
         </div>
     </div>
 
-    <!--LIST VIEW-->
-    <div th:fragment="list_view" class="container mt-5 mb-5">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="d-flex flex-row justify-content-between align-items-center filters">
-                    <h6 th:text="${#lists.size(packetList) + ' Paketa te shfaqura'}"></h6>
-                    <div class="right-sort">
-                        <div class="sort-by">
-                            <span class="mr-1">Shfaq sipas:</span>
-                            <a th:href="@{/packet/offer}">Ofertave</a>
-                            <i class="fa fa-angle-down ml-1"></i>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-1">
-            <div th:each="packet : ${packetList}" class="col-md-4">
-                <div class="p-card bg-white p-2 rounded px-3">
-                    <div class="d-flex align-items-center credits">
-                        <img th:src="*{'data:image/jpeg;base64,'+{packet.city.image}}" height="200px" ><span class="text-black-50 ml-2" th:text="'Prenotuar ' + ${packet.nrOfTimesBooked} + ' here'">prenotuar</span>
-                    </div>
-                    <h5 class="mt-2" th:text="${packet.city.name}">
+    <!--carousel owl-->
 
-                    </h5>
-
-                    <span class="badge badge-danger py-1 mb-2" th:if="${packet.isOffer}" th:text="Oferte" ></span>
-                    <span class="badge badge-danger py-1 mb-2" th:unless="${packet.isOffer}" th:text="Pakete" ></span>
-                    <span th:text="${packet.description}" class="d-block mb-5"></span>
-                    <div class="d-flex justify-content-between stats">
-                        <div>
-                            <i class="fa fa-calendar-o"></i>
-                            <span class="ml-2">Numuri i diteve </span>
-                        </div>
-
-                        <div class="d-flex flex-row align-items-center">
-                            <div th:each="user: ${packet.userList}" class="profiles">
-                                <p class="text" th:src="${user.name}" >
-                                    <p class="rounded-circle" >
-                                <p class="h1" ></p>
-                            </div><span class="ml-3" th:text="${packet.nrOfDays}"></span>
-
-                        </div>
-                        <div>
-                            <i class="fa fa-calendar-o"></i>
-                            <a  class="btn btn-primary" th:href="@{'/packet/profile/' + ${packet.id}}">Shiko</a>
-                        </div>
-
-                        <div sec:authorize="hasRole('ROLE_ADMIN')">
-                            <i class="fa fa-calendar-o"></i>
-                            <a  class="btn btn-danger" th:href="@{'/admin/packet/edit/' + ${packet.id}}">Edito</a>
-                            <a  class="btn btn-danger" th:href="@{'/admin/packet/details/' + ${packet.id}}">Detajet</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <div class="d-flex justify-content-end text-right mt-2">
-            <nav>
-                <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#">5</a></li>
-                    <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
-                </ul>
-            </nav>
-        </div>
+    <div th:fragment="owl_carousel" class="my-slider">
+        <div>test</div>
+        <div>test</div>
+        <div>test</div>
     </div>
 
 
@@ -469,6 +414,10 @@
             </div>
         </div> <!-- .container -->
     </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
 
 </body>
 </html>
