--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -16,9 +16,16 @@
 			method="post" style="max-width: 600px; margin: 0 auto;">
 		<div class="m-3">
 			<div class="form-group row">
-				<label class="col-4 col-form-label">Emri: </label>
+				<label class="col-4 col-form-label">Name: </label>
 				<div class="col-8">
 					<input type="text" th:field="*{name}" class="form-control" required />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-4 col-form-label">UserName: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{username}" class="form-control" required />
 				</div>
 			</div>
 			
