--- a/src/main/resources/templates/listview/all_countries.html
+++ b/src/main/resources/templates/listview/all_countries.html
@@ -2,13 +2,29 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"/>
+    <!-- MDB -->
+    <link rel="stylesheet" href="/assets/css/mdb.min.css" />
     <title>Gjithe Shtetet</title>
 </head>
 <body th:style="'background: url(/images/countries.jpg) no-repeat center center fixed;background-size: cover;'">
+
+<!-- MAIN NAVBAR-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand text-center" >Countries</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+
+
+</nav>
+
+
+
 <div class="container text-center">
 
     <div>
@@ -43,5 +59,7 @@
 <div class="text-center">
     <a class="btn btn-secondary" th:href="@{/admin/home}">kthehu ne Fillim</a>
 </div>
+
+    <script type="text/javascript" src="/assets/js/mdb.min.js"></script>
 </body>
 </html>
