--- a/src/main/resources/templates/listview/all_packets.html
+++ b/src/main/resources/templates/listview/all_packets.html
@@ -3,15 +3,21 @@
   <head>
 
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <link rel="stylesheet" href="/assets/css/card.css">
+
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"/>
+    <!-- MDB -->
+    <link rel="stylesheet" href="/assets/css/mdb.min.css" />
   </head>
 
 
 
 
-  <body th:style="'background: url(/images/background.jpg) no-repeat center center fixed;background-size: cover;'">
+  <body th:style="'background: url(/images/beach_2.jpg) no-repeat center center fixed;background-size: cover;'">
   <!-- MAIN NAVBAR-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" th:href="@{/home}">Travel<span class="text-primary">Agency</span></a>
@@ -25,7 +31,6 @@
         <a class="nav-item nav-link active" th:href="@{/home}">Home <span class="sr-only"></span></a>
         <a class="nav-item nav-link active" th:href="@{/packet/all}">Paketat <span class="sr-only"></span></a>
         <a class="nav-item nav-link active" th:href="@{/about}">Reth Nesh </a>
-        <a class="nav-item nav-link active" th:href="@{/test}">test</a>
       </div>
     </div>
 
@@ -274,8 +279,8 @@
             </p>
             <hr class="my-4" />
             <p class="lead">
-              <strong th:if="${packet.isOffer}" th:text="Oferte"></strong>
-              <strong th:unless="${packet.isOffer}" th:text="Per Momentin Nuk Eshte Oferte"></strong>
+              <strong th:if="${packet.isOffer}" >Oferte"</strong>
+              <strong th:unless="${packet.isOffer}" >Pakete</strong>
             </p>
             <ul class="list-unstyled list-inline d-flex justify-content-between">
               <li class="list-inline-item me-0">
@@ -294,10 +299,8 @@
     </div>
   </div>
 
+  <script type="text/javascript" src="/assets/js/mdb.min.js"></script>
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
