--- a/src/main/resources/templates/listview/my_packets.html
+++ b/src/main/resources/templates/listview/my_packets.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <meta charset="UTF-8">
-    <title>Paketa</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/assets/css/profile_card.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"/>
+    <!-- MDB -->
+    <link rel="stylesheet" href="/assets/css/mdb.min.css" />
 </head>
-<body>
 
-<!--   NAVBAR -->
+<body th:style="'background: url(/images/trip.jpeg) no-repeat center center fixed;background-size: cover;'">
+
+
+<!-- MAIN NAVBAR-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" th:href="@{/home}">Travel<span class="text-primary">Agency</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +27,6 @@
             <a class="nav-item nav-link active" th:href="@{/home}">Home <span class="sr-only"></span></a>
             <a class="nav-item nav-link active" th:href="@{/packet/all}">Paketat <span class="sr-only"></span></a>
             <a class="nav-item nav-link active" th:href="@{/about}">Reth Nesh </a>
-            <a class="nav-item nav-link active" th:href="@{/test}">test</a>
         </div>
     </div>
 
@@ -192,36 +194,68 @@
 
 </nav>
 
-<div class="container h-100 d-flex justify-content-center mt-4">
-    <div class="card mb-3 w-75 " >
-        <div class="row no-gutters">
-            <div class="card-img-top">
-                <img th:src="*{'data:image/jpeg;base64,'+{packet.city.image}}" class="card-img" alt="...">
+
+
+<div class="row justify-content-center">
+    <div class="col-4">
+<!--        put card-->
+        <div th:each="packet:${packetList}"  id="container">
+
+            <div class="product-details">
+
+                <h1 th:text="${packet.city.name}"></h1>
+                <span class="hint-star star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+	            </span>
+
+                <p class="information" th:text="${packet.description}">" Let's spread the joy , here is Christmas , the most awaited day of the year.Christmas Tree is what one need the most. Here is the correct tree which will enhance your Christmas.</p>
+
+
+
+                <div class="control">
+                    <button class="btn ">
+                        <span class="price">$250</span>
+                        <span class="shopping-cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
+                        <span class="buy">Dil</span>
+                    </button>
+                </div>
+
             </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title" th:text="${packet.city.name}">Titulli</h5>
-                    <p class="card-text" th:text="${packet.description}">Pershkrimi</p>
-                    <p class="card-text"><small class="text-muted" th:text="'Ditet e qendrimit : ' + ${packet.nrOfDays}">Ditet</small></p>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12 bg-light text-right">
-                                <a sec:authorize="hasRole('ROLE_USER')" th:if="${isUserOnTheList}" th:href="@{/packet/all}" class="btn btn-primary btn-lg" > Regjistruar</a></div>
-                                <a sec:authorize="hasRole('ROLE_USER')" th:unless="${isUserOnTheList}" class="btn btn-primary btn-lg" th:href="@{'/transaction/buy/packet/' + ${packet.id}}" > Blij Paketen</a></div>
 
-                                <a sec:authorize="hasRole('ROLE_ADMIN')" th:if="${isUserOnTheList}"  th:href="@{/packet/all}" class="btn btn-primary btn-lg" > Regjistruar</a></div>
-                                <a sec:authorize="hasRole('ROLE_ADMIN')" th:unless="${isUserOnTheList}"  class="btn btn-primary btn-lg" th:href="@{'/transaction/buy/packet/' + ${packet.id}}"> Blij Paketen</a></div>
+            <div class="product-image">
 
-                                <a sec:authorize="hasRole('ROLE_ANONYMOUS')" class="btn btn-primary btn-lg" th:href="@{/login}">Logohu Per Me Shume</a>
-                            </div>
-                        </div>
-                    </div>
+                <img th:src="*{'data:image/jpeg;base64,'+{packet.city.image}}" alt="">
+
+                <div class="info">
+                    <h2> Te Dhenat</h2>
+                    <ul>
+                        <li>
+                            <strong th:text="'Ditet : ' + ${packet.nrOfDays}"> </strong>
+
+                        </li>
+                        <li>
+                            <strong th:text="'Maksimumi i udhetareve : '+ ${packet.maxNrOfUsers}"></strong>
+                        <li>
+                            <strong th:text="'Prenotuar : ' + ${packet.nrOfTimesBooked}"></strong>
+                        </li>
+                        <li>
+                            <strong th:if="${packet.isOffer}">Oferte</strong>
+                        </li>
+                        <li>
+                            <strong th:unless="${packet.isOffer}">Pakete</strong>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
+    <!-- MDB SCRIPT-->
+    <script type="text/javascript" src="/assets/js/mdb.min.js"></script>
 
 </body>
 </html>
