--- a/src/main/resources/templates/forms/add_packet_form.html
+++ b/src/main/resources/templates/forms/add_packet_form.html
@@ -65,6 +65,12 @@
                             <label for="description">Pershkrimi</label>
                             <input type="text" id="description" th:field="*{description}" class="form-control" required>
                         </div>
+
+                        <!--MAX NR OF TIMES BOOKED INPUT-->
+                        <div class="form-group">
+                            <label for="description">Cmimi</label>
+                            <input type="number" step="0.1" id="price" th:field="*{price}" class="form-control" required>
+                        </div>
                         <!--IS OFFER INPUT-->
                         <div class="col-sm-8">
                             <input type="checkbox" name="btn_isOffer" th:field="*{isOffer}" th:value="1" class="custom-control-input" id="materialChecked">
