--- a/src/main/resources/templates/forms/edit_user_form.html
+++ b/src/main/resources/templates/forms/edit_user_form.html
@@ -46,6 +46,17 @@
                                 <input type="text" th:field="*{name}" class="form-control" required>
                             </div>
                         </div>
+
+
+                        <!--MONEY INPUT-->
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-4 font-weight-bold display-3">Vlera Lekeve </label>
+                            <div class="col-sm-8">
+                                <input type="number" step="0.1" th:field="*{amountOfMoney}" class="form-control" required>
+                            </div>
+                        </div>
+
+
                         <!-- RADIO BUTTONS -->
                         <div class="form-check">
                             <th:block th:each="rol: ${rolet}">
