--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link active" th:href="@{/home}">Home <span class="sr-only"></span></a>
 				<a class="nav-item nav-link active" th:href="@{/packet/all}">Paketat <span class="sr-only"></span></a>
-				<a class="nav-item nav-link active" th:href="@{/about}">Reth Nesh </a>
+				<a class="nav-item nav-link active" th:href="@{/aboutus}">Reth Nesh </a>
 
 			</div>
 		</div>
@@ -59,7 +59,7 @@
 					</li>
 
 					<li>
-						<a class="nav-link" th:href="@{#}">Pershendetje <span sec:authentication="name"> </span></a>
+						<a class="nav-link" th:href="@{/users/profile}">Pershendetje <span sec:authentication="name"> </span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" th:href="@{/packet/mine}">Paketat e Mija</a>
@@ -81,7 +81,7 @@
 					</li>
 
 					<li>
-						<a class="nav-link"  th:href="@{#}">Pershendetje <span sec:authentication="name"> </span></a>
+						<a class="nav-link"  th:href="@{/users/profile}">Pershendetje <span sec:authentication="name"> </span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" th:href="@{/packet/mine}">Paketat e Mija</a>
@@ -176,6 +176,13 @@
 									<label class="col-form-label col-sm-4"> Passwordi :</label>
 									<div class="col-sm-8">
 										<input type="password" th:field="*{password}" class="form-control" required>
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-sm-4"> Vlera E Lekeve Qe Keni :</label>
+									<div class="col-sm-8">
+										<input type="number" step="0.1" th:field="*{amountOfMoney}" class="form-control" required>
 									</div>
 								</div>
 
