--- a/src/main/resources/templates/profiles/user_profile.html
+++ b/src/main/resources/templates/profiles/user_profile.html
@@ -38,12 +38,11 @@
 <!--  UserCard-->
   <div class="container mt-4">
 
-    <div class="img" style="    background-image: linear-gradient(150deg, rgba(63, 174, 255, .3)15%, rgba(63, 174, 255, .3)70%, rgba(63, 174, 255, .3)94%), url(https://bootdey.com/img/Content/flores-amarillas-wallpaper.jpeg);
-    height: 350px;background-size: cover;"></div>
+    <div class="img" src="/images/trip.jpeg"> </div>
     <div class="card social-prof">
       <div class="card-body">
         <div class="wrapper">
-          <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="" class="user-profile">
+          <img src="/images/trip.jpeg" alt="" class="user-profile">
           <h3 th:text="${user.name}">mondi mondi</h3>
           <p th:text="'Vlera Lekeve : ' + ${user.amountOfMoney}">vlera lekeve </p>
         </div>
