added admin aproval and email service

--- a/src/main/resources/templates/admin/admin_page.html
+++ b/src/main/resources/templates/admin/admin_page.html
@@ -57,6 +57,25 @@
                 </div>
             </div>
 
+            <!-- Orders Card  -->
+            <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
+                <div class="card p-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <img class="card-img-top img-fluid w-lg-75 w-md-50 w-100 text-center" src="/images/admin_background.jpg" alt="Card image cap"/>
+                        </div>
+                        <div class="col-12">
+                            <div class="card-body px-0 pb-0">
+                                <h5 class="card-title">Prenotimet</h5>
+                                <p class="card-text">Administro Prenotimet</p>
+                                <a href="#" class="btn btn-primary">bosh per momentin</a>
+                                <a href="/admin/orders/all" class="btn btn-primary">Shiko Prenotimet</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Clients Card  -->
             <div class="col-lg-6 col-md-6 col-sm-6 mb-4">
                 <div class="card p-4">
