--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -172,6 +172,13 @@
 								</div>
 
 								<div class="form-group row">
+									<label class="col-form-label col-sm-4"> Email :</label>
+									<div class="col-sm-8">
+										<input type="email" th:field="*{email}" class="form-control" required>
+									</div>
+								</div>
+
+								<div class="form-group row">
 									<label class="col-form-label col-sm-4"> Passwordi :</label>
 									<div class="col-sm-8">
 										<input type="password" th:field="*{password}" class="form-control" required>
