--- a/src/main/resources/templates/listview/my_packets.html
+++ b/src/main/resources/templates/listview/my_packets.html
@@ -195,7 +195,6 @@
 </nav>
 
 
-
 <div class="row justify-content-center">
     <div class="col-4">
 <!--      card-->
@@ -204,6 +203,7 @@
             <div class="product-details">
 
                 <h1 th:text="${packet.city.name}"></h1>
+
                 <span class="hint-star star">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -255,7 +255,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <!-- MDB SCRIPT-->
     <script type="text/javascript" src="/assets/js/mdb.min.js"></script>
 
